feat: adding callback connection